// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c26 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c27 {
  background: #000000;
  color: #FFFFFF;
  border: none;
  padding: 1.6rem 3.2rem;
  cursor: pointer;
}

.c27:disabled {
  background: #AAAAAA;
}

.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c24 .c11 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c24 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c24:hover a {
  color: #dc143c;
}

.c24:hover img {
  opacity: 0.8;
}

.c25 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c22 {
  width: 100%;
}

.c23 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c29 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c29 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c31 {
  font-size: calc(1.6rem+ 0.2rem);
  line-height: 1.5;
}

.c31 p {
  margin: 2.4rem 0;
}

.c31 a,
.c31 a:visited,
.c31 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c31 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c31 img {
  max-width: 100%;
}

.c31 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c31 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c31 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c31 ul,
.c31 ol {
  margin: 4.0rem 4.0rem;
}

.c31 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
  margin: 2.4rem;
}

.c31 table {
  width: 100%;
  border-collapse: collapse;
}

.c31 table td,
.c31 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c31 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c30 pre[class*='language-'],
.c30 code[class*='language-'] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,'Andale Mono','Ubuntu Mono','Courier New',monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c30 pre[class*='language-']::selection,
.c30 code[class*='language-']::selection,
.c30 pre[class*='language-'] *::selection,
.c30 code[class*='language-'] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c30 pre[class*='language-'] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c30:not(pre) > code[class*='language-'] {
  padding: 0.1em 0.3em;
  border-radius: 0.3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c30 .namespace {
  opacity: 0.7;
}

.c30 .token.doctype .token.doctype-tag {
  color: #569cd6;
}

.c30 .token.doctype .token.name {
  color: #9cdcfe;
}

.c30 .token.comment,
.c30 .token.prolog {
  color: #6a9955;
}

.c30 .token.punctuation,
.c30 .language-html .language-css .token.punctuation,
.c30 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c30 .token.property,
.c30 .token.tag,
.c30 .token.boolean,
.c30 .token.number,
.c30 .token.constant,
.c30 .token.symbol,
.c30 .token.inserted,
.c30 .token.unit {
  color: #b5cea8;
}

.c30 .token.selector,
.c30 .token.attr-name,
.c30 .token.string,
.c30 .token.char,
.c30 .token.builtin,
.c30 .token.deleted {
  color: #ce9178;
}

.c30 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c30 .token.operator,
.c30 .token.entity {
  color: #d4d4d4;
}

.c30 .token.operator.arrow {
  color: #569cd6;
}

.c30 .token.atrule {
  color: #ce9178;
}

.c30 .token.atrule .token.rule {
  color: #c586c0;
}

.c30 .token.atrule .token.url {
  color: #9cdcfe;
}

.c30 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c30 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c30 .token.keyword {
  color: #569cd6;
}

.c30 .token.keyword.module,
.c30 .token.keyword.control-flow {
  color: #c586c0;
}

.c30 .token.function,
.c30 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c30 .token.regex {
  color: #d16969;
}

.c30 .token.important {
  color: #569cd6;
}

.c30 .token.italic {
  font-style: italic;
}

.c30 .token.constant {
  color: #9cdcfe;
}

.c30 .token.class-name,
.c30 .token.maybe-class-name {
  color: #4ec9b0;
}

.c30 .token.console {
  color: #9cdcfe;
}

.c30 .token.parameter {
  color: #9cdcfe;
}

.c30 .token.interpolation {
  color: #9cdcfe;
}

.c30 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c30 .token.boolean {
  color: #569cd6;
}

.c30 .token.property,
.c30 .token.variable,
.c30 .token.imports .token.maybe-class-name,
.c30 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c30 .token.selector {
  color: #d7ba7d;
}

.c30 .token.escape {
  color: #d7ba7d;
}

.c30 .token.tag {
  color: #569cd6;
}

.c30 .token.tag .token.punctuation {
  color: #808080;
}

.c30 .token.cdata {
  color: #808080;
}

.c30 .token.attr-name {
  color: #9cdcfe;
}

.c30 .token.attr-value,
.c30 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c30 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c30 .token.entity {
  color: #569cd6;
}

.c30 .token.namespace {
  color: #4ec9b0;
}

.c30 pre[class*='language-javascript'],
.c30 code[class*='language-javascript'],
.c30 pre[class*='language-jsx'],
.c30 code[class*='language-jsx'],
.c30 pre[class*='language-typescript'],
.c30 code[class*='language-typescript'],
.c30 pre[class*='language-tsx'],
.c30 code[class*='language-tsx'] {
  color: #9cdcfe;
}

.c30 pre[class*='language-css'],
.c30 code[class*='language-css'] {
  color: #ce9178;
}

.c30 pre[class*='language-html'],
.c30 code[class*='language-html'] {
  color: #d4d4d4;
}

.c30 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c30 .language-html .token.punctuation {
  color: #808080;
}

.c30 pre[data-line] {
  position: relative;
}

.c30 pre[class*='language-'] > code[class*='language-'] {
  position: relative;
  z-index: 1;
}

.c30 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c32 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c11 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c8 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c9 {
  margin: auto;
  width: 100%;
}

.c10 .c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c10 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c6 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c15 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c20:disabled {
  outline: 0.1rem solid #dc143c;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c28 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c23 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c31 {
    font-size: 2rem;
  }

  .c31 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media print {
  .c30 pre[class*='language-'],
  .c30 code[class*='language-'] {
    text-shadow: none;
  }
}

@media (max-width:360px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c16 > .c11 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c17 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c8 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c6 {
    left: -0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Toggle light and dark modes
        <input
          class="c3"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <a
      aria-label="Open or close menu"
      class="c6"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c8"
    >
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <h1
            class="c11 c12"
          >
            <a
              class="c13"
              href="/"
              target="_self"
            >
              <img
                alt="Otávio Miranda"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c14"
          href="#target"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c14"
          href="#link2"
          target="_blank"
        >
          o LINK 2
        </a>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c11 c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            <img
              alt="Otávio Miranda - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c17"
        >
          <h2
            class="c11 c18"
          >
            Otávio Miranda
          </h2>
          <p>
            Uma descrição para o seu blog.
          </p>
        </div>
      </header>
    </div>
    <div
      class="c19"
    >
      <input
        class="c20"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c7 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          <div
            class="c24"
          >
            <a
              href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
            >
              <img
                alt="Vis nobis veritus maluisset id, nonumy adversarium"
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
              >
                Vis nobis veritus maluisset id, nonumy adversarium
              </a>
            </h2>
            <p
              class=""
            >
              Fugit aliquip erroribus eu eam, an mel vidit doctus. Vis nobis veritus maluisset id, nonumy adversarium neglegentur est ut. Tation persius pri eu, modo minim fastidii mei no. Ad tota pertinax definiebas eam.
            </p>
          </div>
          <div
            class="c24"
          >
            <a
              href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
            >
              <img
                alt="Sea Array Destructuring dicat fabulas consetetur "
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
              >
                Sea Array Destructuring dicat fabulas consetetur 
              </a>
            </h2>
            <p
              class=""
            >
              Quod oblique mei ne, cetero delicatissimi sea cu, cu est harum dicit verterem. Tota forensibus ut usu, luptatum dignissim persecuti vel ex. Mea nostrud instructior cu, et referrentur theophrastus eum. Pro in iuvaret senserit.
            </p>
          </div>
          <div
            class="c24"
          >
            <a
              href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
            >
              <img
                alt="Quod oblique mei ne, cetero delicatissimi sea"
                class="c25"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c11 c18"
            >
              <a
                href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
              >
                Quod oblique mei ne, cetero delicatissimi sea
              </a>
            </h2>
            <p
              class=""
            >
              Et sed legere rationibus, vitae evertitur ad eam. Eu amet vero officiis vis. Ad nullam pericula neglegentur sit, vix ei regione legendos argumentum. Mei an quas convenire, nobis dicunt mei ut. 
            </p>
          </div>
        </div>
      </div>
      <div
        class="c26"
      >
        <button
          class="c27"
        >
          Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c28"
    >
      <footer
        class="c29"
      >
        <div
          class="c30"
        >
          <div
            class="c31"
          >
            <p>
              O texto da footer
            </p>
          </div>
          ;
        </div>
      </footer>
    </div>
    <a
      class="c32"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c22 {
  width: 100%;
}

.c23 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c24 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c26 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c26 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c28 {
  font-size: calc(1.6rem+ 0.2rem);
  line-height: 1.5;
}

.c28 p {
  margin: 2.4rem 0;
}

.c28 a,
.c28 a:visited,
.c28 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c28 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c28 img {
  max-width: 100%;
}

.c28 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c28 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c28 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c28 ul,
.c28 ol {
  margin: 4.0rem 4.0rem;
}

.c28 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
  margin: 2.4rem;
}

.c28 table {
  width: 100%;
  border-collapse: collapse;
}

.c28 table td,
.c28 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c28 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c27 pre[class*='language-'],
.c27 code[class*='language-'] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,'Andale Mono','Ubuntu Mono','Courier New',monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c27 pre[class*='language-']::selection,
.c27 code[class*='language-']::selection,
.c27 pre[class*='language-'] *::selection,
.c27 code[class*='language-'] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c27 pre[class*='language-'] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c27:not(pre) > code[class*='language-'] {
  padding: 0.1em 0.3em;
  border-radius: 0.3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c27 .namespace {
  opacity: 0.7;
}

.c27 .token.doctype .token.doctype-tag {
  color: #569cd6;
}

.c27 .token.doctype .token.name {
  color: #9cdcfe;
}

.c27 .token.comment,
.c27 .token.prolog {
  color: #6a9955;
}

.c27 .token.punctuation,
.c27 .language-html .language-css .token.punctuation,
.c27 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c27 .token.property,
.c27 .token.tag,
.c27 .token.boolean,
.c27 .token.number,
.c27 .token.constant,
.c27 .token.symbol,
.c27 .token.inserted,
.c27 .token.unit {
  color: #b5cea8;
}

.c27 .token.selector,
.c27 .token.attr-name,
.c27 .token.string,
.c27 .token.char,
.c27 .token.builtin,
.c27 .token.deleted {
  color: #ce9178;
}

.c27 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c27 .token.operator,
.c27 .token.entity {
  color: #d4d4d4;
}

.c27 .token.operator.arrow {
  color: #569cd6;
}

.c27 .token.atrule {
  color: #ce9178;
}

.c27 .token.atrule .token.rule {
  color: #c586c0;
}

.c27 .token.atrule .token.url {
  color: #9cdcfe;
}

.c27 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c27 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c27 .token.keyword {
  color: #569cd6;
}

.c27 .token.keyword.module,
.c27 .token.keyword.control-flow {
  color: #c586c0;
}

.c27 .token.function,
.c27 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c27 .token.regex {
  color: #d16969;
}

.c27 .token.important {
  color: #569cd6;
}

.c27 .token.italic {
  font-style: italic;
}

.c27 .token.constant {
  color: #9cdcfe;
}

.c27 .token.class-name,
.c27 .token.maybe-class-name {
  color: #4ec9b0;
}

.c27 .token.console {
  color: #9cdcfe;
}

.c27 .token.parameter {
  color: #9cdcfe;
}

.c27 .token.interpolation {
  color: #9cdcfe;
}

.c27 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c27 .token.boolean {
  color: #569cd6;
}

.c27 .token.property,
.c27 .token.variable,
.c27 .token.imports .token.maybe-class-name,
.c27 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c27 .token.selector {
  color: #d7ba7d;
}

.c27 .token.escape {
  color: #d7ba7d;
}

.c27 .token.tag {
  color: #569cd6;
}

.c27 .token.tag .token.punctuation {
  color: #808080;
}

.c27 .token.cdata {
  color: #808080;
}

.c27 .token.attr-name {
  color: #9cdcfe;
}

.c27 .token.attr-value,
.c27 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c27 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c27 .token.entity {
  color: #569cd6;
}

.c27 .token.namespace {
  color: #4ec9b0;
}

.c27 pre[class*='language-javascript'],
.c27 code[class*='language-javascript'],
.c27 pre[class*='language-jsx'],
.c27 code[class*='language-jsx'],
.c27 pre[class*='language-typescript'],
.c27 code[class*='language-typescript'],
.c27 pre[class*='language-tsx'],
.c27 code[class*='language-tsx'] {
  color: #9cdcfe;
}

.c27 pre[class*='language-css'],
.c27 code[class*='language-css'] {
  color: #ce9178;
}

.c27 pre[class*='language-html'],
.c27 code[class*='language-html'] {
  color: #d4d4d4;
}

.c27 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c27 .language-html .token.punctuation {
  color: #808080;
}

.c27 pre[data-line] {
  position: relative;
}

.c27 pre[class*='language-'] > code[class*='language-'] {
  position: relative;
  z-index: 1;
}

.c27 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c29 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c11 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c8 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c9 {
  margin: auto;
  width: 100%;
}

.c10 .c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c10 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c6 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c15 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c20:disabled {
  outline: 0.1rem solid #dc143c;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c25 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c24 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c28 {
    font-size: 2rem;
  }

  .c28 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media print {
  .c27 pre[class*='language-'],
  .c27 code[class*='language-'] {
    text-shadow: none;
  }
}

@media (max-width:360px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c16 > .c11 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c17 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c8 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c6 {
    left: -0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Toggle light and dark modes
        <input
          class="c3"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <a
      aria-label="Open or close menu"
      class="c6"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c8"
    >
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <h1
            class="c11 c12"
          >
            <a
              class="c13"
              href="/"
              target="_self"
            >
              <img
                alt="Otávio Miranda"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c14"
          href="#target"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c14"
          href="#link2"
          target="_blank"
        >
          o LINK 2
        </a>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c11 c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            <img
              alt="Otávio Miranda - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c17"
        >
          <h2
            class="c11 c18"
          >
            Otávio Miranda
          </h2>
          <p>
            Uma descrição para o seu blog.
          </p>
        </div>
      </header>
    </div>
    <div
      class="c19"
    >
      <input
        class="c20"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c7 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <p
          class="c23"
        >
          Nenhum post encontrado aqui =(
        </p>
        <div
          class="c24"
        />
      </div>
    </div>
    <div
      class="c25"
    >
      <footer
        class="c26"
      >
        <div
          class="c27"
        >
          <div
            class="c28"
          >
            <p>
              O texto da footer
            </p>
          </div>
          ;
        </div>
      </footer>
    </div>
    <a
      class="c29"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
        />
      </svg>
    </a>
  </div>
</div>
`;
